# familylink

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: publish.yml  release-drafter.yml
src/familylink/: __init__.py  cli.py  client.py  models.py
