[project]
name = "familylink"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thibault Ducret", email = "hello@tducret.com" }
]
requires-python = ">=3.10"
dependencies = [
    "browser-cookie3>=0.19.1",
    "httpx>=0.28.1",
    "pydantic>=1.8.2",
]

[project.scripts]
familylink = "familylink.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
