[project]
name = "familylink"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thibault Ducret", email = "hello@tducret.com" }
]
requires-python = ">=3.10"
dependencies = [
    "browser-cookie3>=0.19.1",
    "httpx>=0.28.1",
    "pydantic>=1.8.2",
    "rich>=13.7.0",
]

[project.scripts]
familylink = "familylink.cli:main"

[tool.ruff]
target-version = 'py312'

[tool.ruff.lint]
select = [
    'F',      # Pyflakes
    'E',      # pycodestyle (Error)
    'I',      # isort
    'D',      # pydocstyle
    'UP',     # pyupgrade
    'YTT',    # flake8-2020
    'B',      # flake8-bugbear
    'T10',    # flake8-debugger
    'T20',    # flake8-print
    'C4',     # flake8-comprehensions
    'PYI006', # flake8-pyi
    'PYI062', # flake8-pyi
    'PYI063', # flake8-pyi
    'PYI066', # flake8-pyi
]
ignore = ['D105', 'D107', 'D205', 'D415', 'E501', 'B011', 'B028', 'B904']
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
isort = { known-first-party = ['familylink'] }
pydocstyle = { convention = 'google' }

[tool.ruff.lint.per-file-ignores]
'src/familylink/__init__.py' = ['D104']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]
